--- a/frontend/src/components/MapLegend.css
+++ b/frontend/src/components/MapLegend.css
@@ -42,3 +42,9 @@
     background-color: white;
     border: 2px solid black;
 }
+
+@media (max-width: 768px) {
+    .map-legend.panel-open {
+        display: none;
+    }
+}
